# NaviGraph

./: .gitignore  ADJUSTMENT_MODE_IMPLEMENTATION.md  CLEAN_UNIFIED_ARCHITECTURE.md  EDGE_ORDERING_ISSUE.md  FullGridMaze_OnlyNodes.pkl  FullMazeGrid.pkl  GRAPH_REFACTORING_PLAN.md  GRAPH_SETUP_GUI.md  NAVIGRAPH_GUI_EXPERT_REFERENCE.md  README.md  UNIFIED_PLUGIN_MIGRATION_PLAN.md  format_test.pickle  grid_mapping_try1  install.bat  install.sh  partial_map_test  pyproject.toml  svg_export_utility.py  test_actual_data.py  test_adjust_mapping1  test_adjust_mapping2  test_adjustment_mode.py  test_graph_builders.py  test_graph_provider_integration.py  test_head_direction.py  test_working_vs_navigraph.py  validate_first_50.py
.history/examples/dual_root_tree/: IMPLEMENTATION_20260106105056.md  QUICK_REFERENCE_20251229145712.md  README_20251229145115.md  SUMMARY_20251229145748.md  config_dual_root_20251229145028.yaml  test_dual_root_builder_20260106105056.py
examples/: 123.pkl  1234.pkl  complete_pipeline_example.py  full_connected.pkl  fully_connected.py  plugin_development_guide.py  visualization_config_example.py
examples/barnes_maze/: config_barnes.yaml  config_barnes_connected.yaml
examples/barnes_maze/resources/: mapping_barnes.pkl
examples/basic_maze/: config.yaml
examples/basic_maze/resources/: graph_mapping.pkl  graph_mapping_complete.pkl  test_graph_mapping.pkl  transform_matrix.npy  (+1 more)
examples/complex_maze/: config.yaml
examples/dual_root_tree/: ADJUSTMENT_MODE_GUIDE.md  CHANGELOG.md  MazeFullMapping27_11  MazeFullMapping27_11_new.pkl  STRUCTURE_DIAGRAM.txt  config_dual_root.yaml
examples/fully_connected_maze/: README.md  config_fully_connected.yaml
examples/graph_file_loader/: README.md  config_barabasi_albert.yaml  config_file_loader.yaml  config_gexf_format.yaml  config_random_builder.yaml  generate_test_graphs.py
examples/multimodal_demo/: README.md  config.yaml
examples/star_maze/: README.md  config_star.yaml  config_star_connected.yaml
examples/t_maze/: config.yaml
legacy/: visualization_pipeline.py
legacy/analyzers/: navigation_metrics.py  spatial_metrics.py  utils.py
legacy/visualizers/: text_visualizer.py  tree_visualizer.py
navigraph/: __init__.py
navigraph/analysis/: __init__.py  analyzer.py  metrics.py  utils.py
navigraph/cli/: __init__.py  __main__.py  main.py
navigraph/core/: __init__.py  base_plugin.py  config_spec.py  constants.py  conversion_utils.py  coordinate_transform.py  enums.py  exceptions.py  experiment_runner.py  file_discovery.py  interfaces.py  models.py  navigraph_plugin.py  publishers.py  registry.py  session.py  session_analyzer.py  session_visualizer.py  types.py  utils.py  visualization_config.py  visualization_pipeline.py
navigraph/plugins/: __init__.py  calibration.py  graph_location.py  head_direction.py  map_location.py  neural_activity.py  pose_tracking.py  stream_info.py
navigraph/visualizers/: __init__.py  bodyparts.py  graph_overlay.py  map_overlay.py  neural_segmentation.py  text_display.py  time_series.py  trajectory.py
tests/: test_integration.py
tests/analysis/: test_metrics.py  test_metrics_edge_cases.py
tests/configs/: test_config.yaml
visualizer/: visualizer.py
(+1181 files in other folders)
