[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "navigraph"
version = "0.1.0"
description = "Flexible graph-based analysis framework for behavioral research"
authors = ["NaviGraph Team <noreply@navigraph.com>"]
readme = "README.md"
packages = [{include = "navigraph"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5"
pandas = "^2.0.0"
numpy = "^1.24.0"
networkx = "^3.0"
pydantic = "^2.0.0"
click = "^8.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
PyQt5 = "^5.15.0"
h5py = "^3.8.0"
loguru = "^0.7.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.0"
tables = "^3.8.0"
xarray = "^2023.0.0"
dask = "^2023.0.0"
zarr = "^2.14.0"

[tool.poetry.extras]
# neural = ["zarr"]  # zarr is now a standard dependency

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
navigraph = "navigraph.cli.main:cli"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true