[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navigraph"
version = "1.1.0"
description = "Flexible graph-based analysis framework for behavioral research"
authors = [{name = "PBLab", email = "pb@tauex.tau.ac.il"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opencv-python>=4.5.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "PyQt5>=5.15.0",
    "h5py>=3.8.0",
    "loguru>=0.7.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "tables>=3.8.0",
    "xarray>=2023.0.0",
    "dask>=2023.0.0",
    "zarr>=2.14.0",
    "scipy>=1.10.0",
]

[project.scripts]
navigraph = "navigraph.cli.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=7.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true